<resources>
    <!-- Strings related to FSActivity -->
    <string name="app_name">FileScript</string>
    <string name="app_author">Xpp</string>
    <string name="navigation_about">关于</string>
    <string name="navigation_settings">设置</string>
    <string name="confirm">确定</string>
    <string name="title_activity_settings">Settings</string>
    <string name="rename_music">重命名音乐</string>
    <string name="move_trailer">移动预告片</string>
    <string name="coming_soon">敬请期待…</string>
    <string name="exit">退出</string>
    <string name="no_trailer">无预告片，无需移动。</string>
    <string name="no_music">无音乐，无需重命名。</string>
    <string name="trailer_move_result">%1$d个预告片移动完毕。</string>
    <string name="music_rename_result">%1$d个音乐已经蓄势待发…</string>
    <string name="share_to_pc">分享到电脑？</string>
    <string name="music_sending_result">请选择“我的电脑”。</string>
    <string name="about_information">版本：%1$s\n作者：%2$s</string>
    <string name="storage_space">存储空间：共 %1$s，可用 %2$s</string>

    <!--Settings start-->
    <string name="language">语言</string>
    
    <string name="language_default">0</string>
    <string-array name="language_list_titles">
        <item>跟随系统</item>
        <item>中文</item>
        <item>English</item>
    </string-array>

    <string-array name="language_list_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <!--Settings end-->



    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
